--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ assemblyai==0.26.0
 astra-assistants==2.1.0.18
 astrapy==1.4.1
 asyncer==0.0.5
+atlassian-python-api==3.41.15
 attrs==24.2.0
 Authlib==1.3.2
 backoff==2.2.1
